--- a/GoClimbApp/Templates/Crags1.html
+++ b/GoClimbApp/Templates/Crags1.html
@@ -90,8 +90,8 @@
     
     
     
-    <!-- Mehrin's Comment: Access the python weather variables from Views.py Crags1 class-->
-    <!-- Mehrin's Comment: The values are being displayed in HTML alongside attribute names describing the value-->
+    <!--  Access the python weather variables from Views.py Crags1 class-->
+    <!-- The values are being displayed in HTML alongside attribute names describing the value-->
   <div class="row">
       <div class="col d-flex justify-content-center">
         <div class=" card text-white bg-light mb-6">
@@ -106,8 +106,8 @@
             
             
             
-          <!-- Mehrin's Comment: the following values only appear if certain conditions of the control flow statements are fullfiled-->
-          <!-- Mehrin's Comment: the values below are potential hazard warning and only fire wher there is an extreme weather-->
+          <!-- The following values only appear if certain conditions of the control flow statements are fullfiled-->
+          <!-- The values below are potential hazard warning and only fire wher there is an extreme weather-->
 
           <h4>{{windWarning}}</h4>
           <h4>{{rainWarning}}</h4>
