--- a/GoClimbApp/Templates/home.html
+++ b/GoClimbApp/Templates/home.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col-md-4" style="margin-top: 20px;">
                     <div class="about-image">
-                        <a href=""> <img src="{% static 'images/map.png' %}" style="width: 96px; height: 96px;" alt="" /></a>
+                        <a href="{% url 'savedCrags' %}"> <img src="{% static 'images/map.png' %}" style="width: 96px; height: 96px;" alt="" /></a>
                     </div>
                     <div class="about-inner-content">
                         <p>
