--- a/GoClimbApp/Templates/signIn.html
+++ b/GoClimbApp/Templates/signIn.html
@@ -64,7 +64,7 @@
                             <br>
                         </div>
                         <div class="w-100 text-center">
-                            <button style="background-color:#F04C26 ;border-radius: 10px; "> <a href="{% url 'signUp' %}" style="color: #000;"> <b> Sign Up</b> </a> </button>
+                            <button class="form-control btn btn-primary submit px-50%" style="background-color:#F04C26 ; "> <a href="{% url 'signUp' %}" style="color: #000;"> <b> Sign Up</b> </a> </button>
                         </div>
 
                          {{form.errors}}
