--- a/GoClimbApp/Templates/Crags1.html
+++ b/GoClimbApp/Templates/Crags1.html
@@ -52,7 +52,7 @@
 
       };
       var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
-      // The marker, positioned at Uluru
+      // The marker, positioned at Keira
       const marker = new google.maps.Marker({
         position: new google.maps.LatLng(-34.402798882401214, 150.85642735920308),
         map: map,
