--- a/GoClimbApp/Templates/Crags.html
+++ b/GoClimbApp/Templates/Crags.html
@@ -41,13 +41,13 @@
       <option value="Mt Keira">
     </datalist>
     <button id='btn' class="btn  border border-darks"
-      style="background-color: orange;  border-radius: 30px; width: 13%; margin-top: 3px;">Search</button>
+      style="background-color: orange; padding: 10px 20 px; border-radius: 30px; width: 13%; margin-top: 3px;font-size: 15px">Search</button>
   </div>
   <div id="googleMap" style="width:100%;height:400px;"></div>
   
     
   <a class="btn  border border-darks"
-    style="background-color: orange;  border-radius: 30px; width: 40%; margin-top: 10%;color: black; margin-left: 35%;"href="{% url 'Crags1' %}">Lets Climb!
+    style="background-color: orange;  padding: 20px; border-radius: 30px; width: 40%; margin-top: 10%;color: black; margin-left: 35%;font-size: 20px;"href="{% url 'Crags1' %}">Lets Climb! 
   </a>
  
   
