--- a/GoClimbApp/Templates/Crags2.html
+++ b/GoClimbApp/Templates/Crags2.html
@@ -85,7 +85,7 @@
   </div>
   <div style="text-align: center;">
     <input type="submit"
-      style="background-color: #0d80a6;width: 40%;height:40px ; border-radius: 10px;color: white;font-size: medium;"
+      style="background-color:orange;width: 40%;height:40px ; border-radius: 10px;color: white;font-size: medium;"
       value="GO" />
   </div>
   </form>
