--- a/GoClimbApp/Templates/Crags3.html
+++ b/GoClimbApp/Templates/Crags3.html
@@ -114,7 +114,7 @@
 {% endfor %} -->
 
   <div style="text-align: center;">
-    <button style="background-color: #0d80a6;width: 40%;height:40px ; border-radius: 10px; margin-top: 4px;"> <a
+    <button style="background-color:orange;width: 40%;height:50px ; border-radius: 10px; margin-top: 4px;"> <a
         href="{% url 'Crags4' %}"><b style="color: white;font-size: medium;">Select to route track
           &nbsp;</b></a></button>
   </div>
