--- a/GoClimbApp/Templates/MyClimbs.html
+++ b/GoClimbApp/Templates/MyClimbs.html
@@ -35,7 +35,7 @@
     <div>
         {%include "UserPanel.html" with user=request.user %}
     </div>
-    <div style="background-color: black; margin-top: 3px; height: 600px;">
+    <div style="background-color: black; margin-top: 3px; height: 770px;">
 
         <div class="container">
             
@@ -50,7 +50,7 @@
         </div>
         <div class="about-image">
             <a href="{% url 'home' %}"> <img src="{% static 'images/share.png' %}" style="width: 30px; height: 30px; " alt="" />
-                <p style="color: orange;font-weight: bold;  font-size: 30px; font-weight:bolder;"> Keep climbing to earn more points</p>
+                <p style="color: orange;font-weight: bold;  font-size: 30px; font-weight:bolder;"> Keep climbing to earn more points!!</p>
             </a>
         </div>
     </div>
