--- a/GoClimbApp/Templates/Crags3.html
+++ b/GoClimbApp/Templates/Crags3.html
@@ -52,7 +52,7 @@
     <div class="w3-content w3-display-container">
       
       {% for img in imgs %}
-      <img id="img" style="display: block; margin-left: auto; margin-right: auto;width: 50%;height: 300px;width:300px ;"
+      <img id="img" style="display: block; margin-left: auto; margin-right: auto;width: 60%;height: 300px;width:350px ;"
         class="mySlides" src="{%static img.image %}">
         {% endfor %}
 
@@ -70,28 +70,28 @@
 
   
   <div id="demo" class="container" style="background-color: gray;border-radius: 25px; color: black;margin-top: 3px; ">
-    <h5 style="margin-top: 4px;">Crag name:</h5>
+    <h4 style="margin-top: 4px;">Crag name:</h4>
     <p id="demo1" style="color: white;"></p>
 
-    <h5 style="margin-top: 4px;">Grade:</h5>
+    <h3 style="margin-top: 4px;">Grade:</h3>
     <p id="demo2" style="color: white;"></p>
 
-    <h5 style="margin-top: 4px;">Description:</h5>
+    <h3 style="margin-top: 4px;">Description:</h3>
     <p id="demo3" style="color: white;"></p>
 
-    <h5 style="margin-top: 4px;">Bolts :</h5>
+    <h3 style="margin-top: 4px;">Bolts :</h3>
     <p id="demo4" style="color: white;"></p>
 
-    <h5 style="margin-top: 4px;">Rating:</h5>
+    <h3 style="margin-top: 4px;">Rating:</h3>
     <p id="demo5" style="color: white;"></p>
 
-    <h5 style="margin-top: 4px;">Length :</h5>
+    <h3 style="margin-top: 4px;">Length :</h3>
     <p id="demo6" style="color: white;"></p>
 
-    <h5 style="margin-top: 4px;">Ascents:</h5>
+    <h3 style="margin-top: 4px;">Ascents:</h3>
     <p id="demo7" style="color: white;"></p>
 
-    <h5 style="margin-top: 4px;">First Ascen:</h5>
+    <h3 style="margin-top: 4px;">First Ascent:</h3>
     <p id="demo8" style="color: white;"></p>
                 
                     
@@ -114,7 +114,7 @@
 {% endfor %} -->
 
   <div style="text-align: center;">
-    <button style="background-color:orange;width: 40%;height:50px ; border-radius: 10px; margin-top: 4px;"> <a
+    <button style="background-color:orange;width: 50%;height:50px ; border-radius: 10px; margin-top: 4px;"> <a
         href="{% url 'Crags4' %}"><b style="color: white;font-size: medium;">Select to route track
           &nbsp;</b></a></button>
   </div>
