--- a/GoClimbApp/Templates/Crags4.html
+++ b/GoClimbApp/Templates/Crags4.html
@@ -51,7 +51,7 @@
 
 
   <a class="btn  border border-darks"
-    style="background-color: orange;  border-radius: 30px; width: 16%; margin-top: 2%;color: black; margin-left: 40%;"href="{% url 'Crags5' %}">Next!
+    style="background-color: orange;font-size: 15px;  border-radius: 30px; width: 50%; margin-top: 2%;color: black; margin-left: 28%;"href="{% url 'Crags5' %}">Let's Log this Climb!
   </a>
 
 
