--- a/GoClimbApp/Templates/Crags5.html
+++ b/GoClimbApp/Templates/Crags5.html
@@ -90,7 +90,7 @@
 <br><br><br>
   
   <div style="text-align: center;padding: 5%; margin-top: 10%;">
-  <button style="background-color: #f04c26;width: 50%;height:40px ;border-radius: 25px;" > <b style="color: white;font-size: medium;">Log Climb</b></button>
+  <button style="background-color:orange;width: 50%;height:40px ;border-radius: 25px;" > <b style="color: white;font-size: medium;">Log Climb</b></button>
   </div>
 </form>
 
