--- a/GoClimbApp/Templates/Crags1.html
+++ b/GoClimbApp/Templates/Crags1.html
@@ -34,7 +34,7 @@
 
 </head>
 
-<body style="background:linear-gradient(to left top,blue,white,yellow);"
+<body style="background-color:black";
   
 }>
   <div>
@@ -70,8 +70,8 @@
       <tr>
         <td><img style="margin:10px ;" src="{% static 'images\warning.png' %}" alt="warning"></td>
         <td
-          style="text-align:center;background-color: white; color: #f04c26;padding: 18px; border-radius: 15px;">
-          <h3 style="color:darkorange;font-size: 20px;border-style:solid;border-radius: 15px;"> Potential Hazard of <br> landslide and muddy tracks <br> due to 60% rain. </h3>
+          style="text-align:center;background-color: white; color: #f04c26;padding: 0px; border-radius: 15px;">
+          <h3 style="color:darkorange;font-size: 20px;border-radius: 15px;"> Potential Hazard of <br> landslide and muddy tracks <br> due to 60% rain. </h3>
         </td>
       </tr>
     </table>
@@ -80,16 +80,16 @@
 
 
     <span style="text-align:right ;display: inline-block; margin-left: 25%; padding-bottom: 2px;">
-      <span style="display: inline-block;"></span><img src="{% static 'images\cloud (1).png' %}" alt="" style="width:70px;height:70px; margin-right: 5%;"></span>
-      <span style="display: inline-block;"><img src="{% static 'images\sun.png' %}" alt="" style="width:70px;height:70px;margin-right: 5%;"></span>
-      <span style="display: inline-block;"><img src="{% static 'images\storm.png' %}" alt="" style="width:70px;height:70px;margin-right: 5%;"></span>
+      <span style="display: inline-block;"></span><img src="{% static 'sunny.gif' %}" alt="" style="width:70px;height:70px; margin-right: 5%;"></span>
+      <span style="display: inline-block;"><img src="{% static 'rainy.gif' %}" alt="" style="width:70px;height:70px;margin-right: 5%;"></span>
+      <span style="display: inline-block;"><img src="{% static 'lighting.gif' %}" alt="" style="width:70px;height:70px;margin-right: 5%;"></span>
     </span>
   </div>
   
   
-    <div class=" d-flex justify-content-center">
+    <div class=" border-radius:25px;d-flex justify-content-center">
       <div class=" card text-white bg-light ">
-        <div class=" card-body">
+        <div class="card-body">
           <h4><span class="badge badge-primary">Temperature in Celsius :</span> {{temp}}</h4>
           <h4><span class="badge badge-primary">Pressure :</span> {{pressure}} </h4>
           <h4><span class="badge badge-primary">Humidity : </span> {{humidity}}</h4>
