--- a/GoClimbApp/Templates/index.html
+++ b/GoClimbApp/Templates/index.html
@@ -27,13 +27,14 @@
 <body>
     <section class="header">
         
-        <div class="container" style="height: 130%;  width: 100%;text-align: center; background-image: linear-gradient(to right, darkorange , yellow,crimson); ">
+        <div class="container" style="height: 130%;  width: 100%;text-align: center; background-image: linear-gradient(45deg, orange,darkorange,white,black); ">
             <div> 
                 <a href="{% url 'signIn' %}"><img style="height: 40%; width:40%; text-align: center;margin-top: 10%;" src="{% static 'images/Log.png' %}" alt="" /></a>
                 
             </div>
             <div style="font-size: 40px;margin-top: 10%; color: black;">
-                <a href="{% url 'signIn' %}" style="color: black; font-size: larger; font-weight: bold;"> Go Climb</a>
+                <a href="{% url 'signIn' %}" style="color: black; font-size: larger;font-family: Arial, Helvetica, sans-serif; font-weight: bold;"> Go Climb</a>
+                
                 <!-- <img src="{% static 'images/letsgo.png' %}" alt="" /> -->
             </div>
             
